# ML-Ops-e-machine-learning-in-operazione

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
notebooks/: ML-Ops-sentiment-analysis.ipynb
src/: data.py  deploy.py  model.py  monitor.py  predict.py  train.py
src/mlops_sentiment_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model.py
