[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlops-sentiment-analysis"
version = "0.1.0"
description = "Sentiment analysis ML-Ops project with Hugging Face training, deployment, and monitoring."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Emanuele Salbego", email = "emanuele@example.com" },
]
keywords = ["mlops", "sentiment-analysis", "huggingface", "monitoring", "deployment"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "transformers==4.35.2",
  "numpy<2",
  "datasets>=2.15.0",
  "scikit-learn>=1.2",
  "huggingface_hub>=0.16.0",
  "pandas>=2.0",
  "tqdm>=4.0",
  "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
